@@ -94,6 +94,10 @@ mjb.skin.dir=./skins/default
 # Genres file used for consolidating/renaming genres
 mjb.xmlGenreFile=genres-default.xml
 
+# List of genres to skip when scraping video information. 
+# These genres will not be saved in the video xml files
+mjb.genre.skip=
+
 # Categories file used for enabling/renaming catgories
 mjb.xmlCategoryFile=categories-default.xml
 
